# CPP-Python-Package

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: c-cpp.yml  publish-pypi-test-env.yml  wheels.yml
C_API/: api.c  api.cpp  api.h
cpp_code/: CMakeLists.txt  Image.cpp  Image.hpp  MagicNumbers.hpp  SnakeController.cpp  SnakeController.hpp  SnakeInterface.cpp  SnakeInterface.hpp  api.cpp  api.hpp  api_impl.cpp  api_impl.hpp  bindings.cpp
cpp_code/Algorithm/: ContourResampler.cpp  ContourResampler.hpp  ELSnakeEngine.cpp  ELSnakeEngine.hpp  GreedySnakeEngine.cpp  GreedySnakeEngine.hpp  ISnakeEngine.cpp  ISnakeEngine.hpp  SnakeEngine.cpp  SnakeEngine.hpp
cpp_code/DataObjects/: Contour.cpp  Contour.hpp  Image.cpp  Image.hpp  ImageHolder.hpp  ImageHolder2channel.hpp  ImageHolderBase.hpp  ImageInfo.hpp  ImageProcessor.cpp  ImageProcessor.hpp  Point.cpp  Point.hpp  SnakeParams.hpp
cpp_code/IO/: WriteImage.cpp  WriteImage.hpp
cpp_code/ImageProcessing/: IConvolve.hpp  IIntensityManipulator.hpp  IintensityManipulator.hpp  ImageProcessor.cpp  ImageProcessor.hpp  ImageProcessorFacade.cpp  ImageProcessorFacade.hpp  IntensityManipulator.cpp  IntensityManipulator.hpp  NaiveConvolve.cpp  NaiveConvolve.hpp
cpp_code/Tests/: ContourResampler_Test.cpp  DataObjects_Test.cpp  ELSnakeEngine_Test.cpp  GreedySnakeTest.cpp  ImageHolderTest.cpp  Image_Test.cpp  InternalForceTest.cpp  SnakeEngine_Test.cpp
cpp_code/Tests/Test_Classes/: GreedySnakeTestWrapper.cpp
python/: Config.py  Image.py  Params.py  PyAPI.py  UI.py  output.pgm  test_api.py
python/DataClasses/: DataClasses.py
python/Params/: params.json
python_code/: PyAPI.py  pyproject.toml  setup.cfg  setup.py
python_code/SnakesPy/: ActiveContour.py  Config.py  Params.py  PyAPI.py  RunActiveContour.py  UI.py  __init__.py  test_api.py
python_code/SnakesPy/SnakesPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python_code/src/: ActiveContour.py  Config.py  Image.py  __init__.py  test_api.py
