[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SnakesPy"
version = "0.1.0"
authors = [
  { name="Samuel van Gurp"},
]
description = "Active Contour python package with a C++ Calculation core."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pillow",
    "matplotlib",
    "pybind11",
]

[tool.setuptools.packages.find]
where = ["SnakesPy"]